# DeviceDiscovery

./: .gitignore  CMakeLists.txt  README.md
cmake/: DeviceDiscoveryDeviceConfig.cmake.in  DeviceDiscoveryHostConfig.cmake.in
src/comm/: comm.cmake  datakey.h  devicerecord.h  discoveryrequest.h  hmac.h
src/device/: CMakeLists.txt  discoveryservice.cpp  discoveryservice.h  ibroadcaststrategy.h
src/device/strategy/: udpbroadcaststrategy.cpp  udpbroadcaststrategy.h  udpmulticastbroadcaststrategy.cpp  udpmulticastbroadcaststrategy.h
src/devicediscovery/comm/: comm.cmake  datakey.h  devicerecord.h  discoveryrequest.h  global.h  hmac.h
src/devicediscovery/device/: CMakeLists.txt  discoveryservice.cpp  discoveryservice.h  ibroadcaststrategy.h
src/devicediscovery/device/strategy/: udpbroadcaststrategy.cpp  udpbroadcaststrategy.h  udpmulticastbroadcaststrategy.cpp  udpmulticastbroadcaststrategy.h
src/devicediscovery/host/: CMakeLists.txt  discoverymanager.cpp  discoverymanager.h  idiscoverystrategy.h  interfacetools.cpp  interfacetools.h
src/devicediscovery/host/strategy/: udpbroadcastdiscoverystrategy.cpp  udpbroadcastdiscoverystrategy.h  udpmulticastdiscoverystrategy.cpp  udpmulticastdiscoverystrategy.h
src/host/: CMakeLists.txt  discoverymanager.cpp  discoverymanager.h  idiscoverystrategy.h  interfacetools.cpp  interfacetools.h
src/host/strategy/: udpbroadcastdiscoverystrategy.cpp  udpbroadcastdiscoverystrategy.h  udpdiscoverystrategy.cpp  udpdiscoverystrategy.h  udpmulticastdiscoverystrategy.cpp  udpmulticastdiscoverystrategy.h
test/: CMakeLists.txt  main.cpp
